--- a/package.json
+++ b/package.json
@@ -7,21 +7,29 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "tslint": "tslint \"src/**/*.ts\" --project tsconfig.json",
+    "tslint:fix": "tslint \"src/**/*.ts\" --fix"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/lodash": "^4.14.130",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "tslint-config-airbnb": "^5.11.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -43,6 +51,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "rxjs-tslint": "^0.1.5"
   }
 }
